Updated Spanish translation.
2006-01-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

svn path=/trunk/; revision=3409

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 Tue Jan 10 08:44:23 2006  Tim Janik  <timj@gtk.org>
 
 	* it.po: translation updates from Michele
