--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,10 @@
+Tue Jan 17 23:38:02 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfitypes.h: Introduce int64 and uint64 types - within the scope of
+	BEAST, we guarantee that their printf format is always "%lld" (as
+	opposed to gint64/guint64, which requires different printf formats on
+	32-bit and 64-bit platforms).
+
 Tue Nov 15 21:57:46 2005  Tim Janik  <timj@gtk.org>
 
 	* sfiprimitives.h: 
