Change caching code to handle 64 bit offsets.
Sat Jan 21 18:50:44 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* gsldatacache.[hc]: Change caching code to handle 64 bit offsets.

svn path=/trunk/; revision=3414

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jan 21 18:50:44 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* gsldatacache.[hc]: Change caching code to handle 64 bit offsets.
+
 Fri Jan 20 14:46:43 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* gsldefs.h: GslLong is now 64-bit on any platform (before, it was
