--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jan 23 23:33:52 2006  Tim Janik  <timj@gtk.org>
+
+	* web/documentation.doxi: converted to doxer markup.
+
+	* docs/faq.doxi: minor fixups.
+
 Mon Jan 23 22:55:15 2006  Tim Janik  <timj@gtk.org>
 
 	* docs/faq.doxi: converted to doxer markup.
