--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Sat Jan 28 16:06:04 2006  Tim Janik  <timj@gtk.org>
+
+	* docs/sfidl.1.doxi:
+	* docs/bsesh.1.doxi:
+	* docs/beast.1.doxi: converted to doxer markup.
+
+	* web/webmenu.doxi: added sfidl.1 to webmenu.
+
+	* web/beastdefs.doxi: added manual page markup commands.
+
+	* web/Makefile: build manual pages, listed unported files.
+
 Tue Jan 24 03:25:26 2006  Tim Janik  <timj@gtk.org>
 
 	* web/overview2003de.doxi: converted to doxer markup.
