--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Jan 28 17:34:59 2006  Tim Janik  <timj@gtk.org>
+
+	* web/wiki.doxi: converted to doxer markup.
+
+	* web/webmenu.doxi:
+	* web/search.doxi: correctly indicate search domain in the google
+	search result list.
+
 Sat Jan 28 16:06:04 2006  Tim Janik  <timj@gtk.org>
 
 	* docs/sfidl.1.doxi:
