--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Jan 28 19:59:41 2006  Tim Janik  <timj@gtk.org>
+
+	* docs/sfidl-manual.doxi:
+	* docs/plugin-devel.doxi: converted to doxer markup, many
+	markup fixes.
+
+	* web/beastdefs.doxi: added more source code specific markup macros.
+
 Sat Jan 28 18:20:18 2006  Tim Janik  <timj@gtk.org>
 
 	* docs/architecture.doxi: converted to doxer markup.
