translation update by Michele Petrecca <michelinux@alice.it>.
Mon Jan 30 01:32:25 2006  Tim Janik  <timj@gtk.org>

        * it.po: translation update by Michele Petrecca <michelinux@alice.it>.

svn path=/trunk/; revision=3433

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan 30 01:32:25 2006  Tim Janik  <timj@gtk.org>
+
+	* it.po: translation update by Michele Petrecca <michelinux@alice.it>.
+
 2006-01-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
