--- a/doxer/ChangeLog
+++ b/doxer/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 31 02:42:38 2006  Tim Janik  <timj@gtk.org>
+
+	* doxer/docu-main.doxi: start of doxer documentation.
+
 Tue Jan 31 02:41:09 2006  Tim Janik  <timj@gtk.org>
 
 	* doxer/: new directory for a new documentation system.
