--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Feb  1 20:01:08 2006  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstutils.[hc]: 
+	* beast-gtk/gxk/*.[hc]: converted documentation markup to doxer.
+
+	* web/Makefile: build full GXK API docs.
+
 Wed Feb  1 00:21:38 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkutils.c: converted documentation markup to doxer.
