--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Feb  2 02:15:58 2006  Tim Janik  <timj@gtk.org>
+
+	* bse/*.[hc]: converted documentation markup to doxer.
+
+	* web/Makefile: build full BSE API docs.
+
 Wed Feb  1 20:01:08 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstutils.[hc]: 
