--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Sun Feb 12 03:33:18 2006  Tim Janik  <timj@gtk.org>
+
+	* shell/bsescminterp.c: turn on guile debugging mode for script registration,
+	so we can retrieve file and line number information for script registration 
+	and pass it on to BSE.
+
+	* web/Makefile: build fixes. generate bse-interface, which includes procedure
+	and script documentation.
+
+	* web/webmenu.doxi: link/menu fixes.
+
+	* beast-gtk/bstutils.c: docu fixups. 
+
 Thu Feb  2 02:15:58 2006  Tim Janik  <timj@gtk.org>
 
 	* bse/*.[hc]: converted documentation markup to doxer.
