--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb 15 23:43:08 2006  Tim Janik  <timj@gtk.org>
+
+	* bseautodoc.c: unify pspec output. generate doxer digestible object
+	documentation.
+
 Sun Feb 12 03:01:09 2006  Tim Janik  <timj@gtk.org>
 
 	* bseautodoc.c: write out procedure and structure docu as python
