--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Feb 17 23:15:42 2006  Tim Janik  <timj@gtk.org>
+
+	* web/screenshots/: new directory containing screenshots for the beast website.
+
+	* web/logogallery/: new directory containing images from the 2003 logo contest.
+
 Fri Feb 17 23:09:43 2006  Tim Janik  <timj@gtk.org>
 
 	* web/Makefile: fixed site update rules.
